# xccelerated_bootcamp

fastapi/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
fastapi/src/fast_api_xcc/: app.py  models.py
fastapi/src/fastapi_xcc/: app.py  test.py
pandas/: 01_pandas_verbs.md  02_remaining_notes.md  03_timeseries_stuff.md  04_modern_pipelines.md  exercise_notebook.ipynb  pandas-exercises.md
pandas/end_project/: config.py  readme.md  wowah_notebook.ipynb
roman_numerals/: pyproject.toml
roman_numerals/src/roman_numeral_converter/: cli.py  converters.py  roman_referals.py
roman_numerals/tests/: test_converters.py
